add utility class

--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,10 @@
     display: none;
   }
 }
+
+@layer utilities {
+  .clip-tag {
+    -webkit-clip-path: polygon(75% 0, 100% 50%, 75% 100%, 0 100%, 0 0);
+    clip-path: polygon(75% 0, 100% 50%, 75% 100%, 0 100%, 0 0);
+  }
+}
